# ExceptionLite

./: .gitmodules  README.md  exceptionlite.cpp  exceptionlite.h  install.sh
cmake/: CMakeLists.txt
example/: main.cpp
